Fix silly mistake before I forget, you should never use MSDOS + VFAT together as 'auto' will always pick MSDOS loosing long filename and FAT32 support :-o. Best option is to just pick VFAT and never use MSDOS in configs (Orkie, I notice it is on in your config).
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@250 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/kernel/linux-open2x-2.4.26_FW2-3/.config
+++ b/kernel/linux-open2x-2.4.26_FW2-3/.config
@@ -724,7 +724,7 @@ CONFIG_EXT3_FS=m
 CONFIG_JBD=m
 # CONFIG_JBD_DEBUG is not set
 CONFIG_FAT_FS=y
-CONFIG_MSDOS_FS=y
+# CONFIG_MSDOS_FS is not set
 # CONFIG_UMSDOS_FS is not set
 CONFIG_VFAT_FS=y
 # CONFIG_EFS_FS is not set
