--- a/kernel/linux-open2x-2.4.26_FW2-3/fs/Config.in
+++ b/kernel/linux-open2x-2.4.26_FW2-3/fs/Config.in
@@ -55,8 +55,6 @@ tristate 'Compressed ROM file system support' CONFIG_CRAMFS
 bool 'Virtual memory file system support (former shm fs)' CONFIG_TMPFS
 define_bool CONFIG_RAMFS y
 
-tristate 'Yet Another Flash File System (YAFFS) support' CONFIG_YAFFS
-
 tristate 'ISO 9660 CDROM file system support' CONFIG_ISO9660_FS
 dep_mbool '  Microsoft Joliet CDROM extensions' CONFIG_JOLIET $CONFIG_ISO9660_FS
 dep_mbool '  Transparent decompression extension' CONFIG_ZISOFS $CONFIG_ISO9660_FS
@@ -109,6 +107,11 @@ dep_mbool    '  Quota support' CONFIG_XFS_QUOTA $CONFIG_XFS_FS
 dep_mbool    '  Realtime support (EXPERIMENTAL)' CONFIG_XFS_RT $CONFIG_XFS_FS $CONFIG_EXPERIMENTAL
 dep_mbool    '  Tracing support (EXPERIMENTAL)' CONFIG_XFS_TRACE $CONFIG_XFS_FS $CONFIG_EXPERIMENTAL
 dep_mbool    '  Debugging support (EXPERIMENTAL)' CONFIG_XFS_DEBUG $CONFIG_XFS_FS $CONFIG_EXPERIMENTAL
+
+if [ "$CONFIG_MTD_NAND" = "y"  ]; then
+   tristate "Yaffs filesystem on NAND (GP2X FW2> Default)" CONFIG_YAFFS_FS
+   tristate "Yaffs2 filesystem on NAND (EXPERIMENTAL)" CONFIG_YAFFS2_FS
+fi
 
 if [ "$CONFIG_NET" = "y" ]; then
 
