Update default .config file and files in /configs to support the new YAFFS defines (just a cleanup to bring things more in sync with the normal kernel naming conventions).
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@259 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/kernel/linux-open2x-2.4.26_FW2-3/.config
+++ b/kernel/linux-open2x-2.4.26_FW2-3/.config
@@ -735,7 +735,6 @@ CONFIG_JFFS2_FS_NAND=y
 CONFIG_CRAMFS=m
 CONFIG_TMPFS=y
 CONFIG_RAMFS=y
-CONFIG_YAFFS=y
 CONFIG_ISO9660_FS=m
 CONFIG_JOLIET=y
 # CONFIG_ZISOFS is not set
@@ -766,6 +765,8 @@ CONFIG_UDF_FS=m
 # CONFIG_XFS_RT is not set
 # CONFIG_XFS_TRACE is not set
 # CONFIG_XFS_DEBUG is not set
+CONFIG_YAFFS_FS=y
+# CONFIG_YAFFS2_FS is not set
 
 #
 # Network File Systems
@@ -975,19 +976,19 @@ CONFIG_USB_MIDI=m
 # CONFIG_USB_STORAGE_SDDR55 is not set
 # CONFIG_USB_STORAGE_JUMPSHOT is not set
 CONFIG_USB_ACM=m
-# CONFIG_USB_PRINTER is not set
+CONFIG_USB_PRINTER=m
 CONFIG_USB_HID=m
 CONFIG_USB_HIDINPUT=y
 CONFIG_USB_HIDDEV=y
 CONFIG_USB_KBD=m
 CONFIG_USB_MOUSE=m
 # CONFIG_USB_AIPTEK is not set
-# CONFIG_USB_WACOM is not set
+CONFIG_USB_WACOM=m
 # CONFIG_USB_KBTAB is not set
-# CONFIG_USB_POWERMATE is not set
+CONFIG_USB_POWERMATE=m
 # CONFIG_USB_DC2XX is not set
 # CONFIG_USB_MDC800 is not set
-# CONFIG_USB_SCANNER is not set
+CONFIG_USB_SCANNER=m
 # CONFIG_USB_MICROTEK is not set
 # CONFIG_USB_HPUSBSCSI is not set
 # CONFIG_USB_IBMCAM is not set
