Update the U-Boot bootloader to support booting off an SD/SDHC card (U-Boot MKIMAGE called kernel.img) and add bunch of other Open2x features such as the boot menu, logo and firmware upgrade enhancements. More refactoring still to be done ;).  Some of this functionality comes from ART103's original U-Boot work but has been substantially reworked to suit the FW2> style bootloader. Flashing of JFFS2 (GP2XFILE.IMG) and YAFFS (GP2XYAFFS.IMG) images are supported along with a number of checks to make sure flashes are valid (there is more work to do in this area).  DMA access to the NAND is also enabled. Boot sound support is included but disabled at the moment (I don’t like it much ;)).
What else, well I loose track, it has been sat locally for such a long time. Oh, WARNING, by default this builds a GP2XKERNEL.IMG that runs as a kernel NOT as a bootloader, change /board/mmsp2dtk/config.mk if you need to build a bootloader that you can flash to the NAND.

git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@261 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/bootloader/u-boot-open2x-1.0.0_FW2-3/Makefile
+++ b/bootloader/u-boot-open2x-1.0.0_FW2-3/Makefile
@@ -133,6 +133,7 @@ ALL = u-boot.srec u-boot.bin System.map
 
 all:		$(ALL)
 		-cp u-boot.bin gp2xboot.img
+		$(U_BOOT_MKIMAGE)/mkimage -A arm -O linux -T kernel -C none -a 00D00000 -e 00D00000 -n "Open2x - Relocated Bootloader" -d u-boot.bin gp2xkernel.img
 
 u-boot.srec:	u-boot
 		$(OBJCOPY) ${OBJCFLAGS} -O srec $< $@
@@ -1029,3 +1030,7 @@ backup:
 	gtar --force-local -zcvf `date "+$$F-%Y-%m-%d-%T.tar.gz"` $$F
 
 #########################################################################
+
+krnlimg:
+	tools/mkimage -A arm -O linux -T kernel -C none -a 00800000 -e 00800000 -n "bldr as krnl" -d gp2xboot.img kernel.img
+
