Deleted some stuff, fixed several makefiles, improved compatibility with many applications and set some default config values.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@272 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/buildroot/package/busybox/busybox.config
+++ b/buildroot/package/busybox/busybox.config
@@ -476,7 +476,7 @@ CONFIG_FEATURE_MOUNT_LOOP=y
 # CONFIG_FEATURE_CROND_CALL_SENDMAIL is not set
 # CONFIG_CRONTAB is not set
 # CONFIG_DC is not set
-CONFIG_DEVFSD=y
+# CONFIG_DEVFSD is not set
 # CONFIG_DEVFSD_MODLOAD is not set
 CONFIG_DEVFSD_FG_NP=y
 # CONFIG_DEVFSD_VERBOSE is not set
