Updated builtroot for new Open2x binary repository layout, added a few packages, updated old ones and fixed a few bugs.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@275 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/buildroot/package/Config.in
+++ b/buildroot/package/Config.in
@@ -3,6 +3,7 @@ menu "Package Selection for the target"
 
 comment "The default minimal system"
 source "package/busybox/Config.in"
+source "package/devfsd/Config.in"
 source "package/fakeroot/Config.in"
 
 comment "Libraries"
@@ -10,14 +11,16 @@ source "package/o2xlibs/Config.in"
 
 comment "Applications"
 source "package/gmenu2x/Config.in"
+source "package/gp2xsleep/Config.in"
 
 comment "System"
-source "package/bash/Config.in"
-source "package/coreutils/Config.in"
+#source "package/bash/Config.in"
+source "package/bftpd/Config.in"
+#source "package/coreutils/Config.in"
 source "package/mkdosfs/Config.in"
-source "package/nano/Config.in"
+#source "package/nano/Config.in"
 source "package/tftpd/Config.in"
-source "package/tinyx/Config.in"
+#source "package/tinyx/Config.in"
 source "package/utelnetd/Config.in"
 
 comment "Development"
