Removed tftpd (we use bftpd). Fixed scripts which were broken. Added samba client to the default config. You need to delete /usr/sbin/smbd manually if you don't need the server (it's quite large at 2.6MB stripped).
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@276 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/buildroot/.config
+++ b/buildroot/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Sun Aug 12 14:49:22 2007
+# Thu Aug 23 20:59:53 2007
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -93,13 +93,38 @@ BR2_PACKAGE_GP2XSLEEP=y
 #
 BR2_PACKAGE_BFTPD=y
 # BR2_PACKAGE_MKDOSFS is not set
-# BR2_PACKAGE_TFTPD is not set
 BR2_PACKAGE_UTELNETD=y
 
 #
 # Development
 #
-# BR2_PACKAGE_SAMBA is not set
+BR2_PACKAGE_SAMBA=y
+
+#
+# Samba tools selection
+#
+# BR2_PACKAGE_SAMBA_CIFS is not set
+# BR2_PACKAGE_SAMBA_EVENTLOGADM is not set
+# BR2_PACKAGE_SAMBA_NET is not set
+# BR2_PACKAGE_SAMBA_NMBD is not set
+# BR2_PACKAGE_SAMBA_NMBLOOKUP is not set
+# BR2_PACKAGE_SAMBA_NTLM_AUTH is not set
+# BR2_PACKAGE_SAMBA_PDBEDIT is not set
+# BR2_PACKAGE_SAMBA_PROFILES is not set
+# BR2_PACKAGE_SAMBA_RPCCLIENT is not set
+# BR2_PACKAGE_SAMBA_SMBCACLS is not set
+# BR2_PACKAGE_SAMBA_SMBCLIENT is not set
+# BR2_PACKAGE_SAMBA_SMBCONTROL is not set
+# BR2_PACKAGE_SAMBA_SMBCQUOTAS is not set
+# BR2_PACKAGE_SAMBA_SMBGET is not set
+# BR2_PACKAGE_SAMBA_SMBPASSWD is not set
+# BR2_PACKAGE_SAMBA_SMBSPOOL is not set
+# BR2_PACKAGE_SAMBA_SMBSTATUS is not set
+# BR2_PACKAGE_SAMBA_SMBTREE is not set
+# BR2_PACKAGE_SAMBA_SWAT is not set
+# BR2_PACKAGE_SAMBA_TDB is not set
+# BR2_PACKAGE_SAMBA_TESTPARM is not set
+# BR2_PACKAGE_SAMBA_WINBINDD is not set
 
 #
 # Target Options
