Added a hacked, statically linked tslib to smooth out the touchpad Fixed false mouse detection when USB activated but no mouse attatched. USB keyboard started but not ready yet.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@293 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/libs/SDL-1.2.9/src/video/gp2x/Makefile.am
+++ b/libs/SDL-1.2.9/src/video/gp2x/Makefile.am
@@ -6,6 +6,7 @@ libvideo_gp2x_la_SOURCES = $(gp2x_SRCS)
 
 # The SDL gp2x video driver sources
 gp2x_SRCS = 			\
+	gp2x_tslib.c		\
 	SDL_gp2xvideo.h		\
 	SDL_gp2xevents.c	\
 	SDL_gp2xevents_c.h	\
