Patches to NAND and SD drivers to provide a dedicated SD automounter, the ability to force erase bad blocks on the NAND and an option to swtich between NAND layout versions (i.e. full NAND layout for DR4+ or partitioned into filesystem and user NAND areas for DR3 and below, including GPH
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@304 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/kernel/linux-open2x-2.4.26_FW2-3/drivers/mmcsd/Config.in
+++ b/kernel/linux-open2x-2.4.26_FW2-3/drivers/mmcsd/Config.in
@@ -7,6 +7,7 @@ comment 'MMC/SD Card support'
 tristate 'MMC/SD support' CONFIG_MMCSD
 if [ "$CONFIG_MMCSD" = "y" -o "$CONFIG_MMCSD" = "m" ]; then
   bool '  MMC/SD debugging' CONFIG_MMCSD_DEBUG
+  bool '  Open2x SD automounter' CONFIG_OPEN2X_SD_AUTOMOUNT
   if [ "$CONFIG_MMCSD_DEBUG" = "y" ]; then
     int '  MMC/SD debugging verbosity (0=quiet, 3=noisy)' CONFIG_MMCSD_DEBUG_VERBOSE 0
   fi
