Added a kexec syscall to the kernel. Tested and working, patch found here (a few minor alterations were needed to apply):
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@305 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/kernel/linux-open2x-2.4.26_FW2-3/arch/arm/config.in
+++ b/kernel/linux-open2x-2.4.26_FW2-3/arch/arm/config.in
@@ -511,6 +511,7 @@ if [ "$CONFIG_ARCH_SA1100" = "y" -o \
      "$CONFIG_ARCH_INTEGRATOR" = "y" ]; then
    dep_bool 'Support CPU clock change (EXPERIMENTAL)' CONFIG_CPU_FREQ $CONFIG_EXPERIMENTAL
 fi
+bool 'kexec system call' CONFIG_KEXEC
 
 source drivers/pci/Config.in
 bool 'Support for hot-pluggable devices' CONFIG_HOTPLUG
