--- a/kernel/linux-open2x-2.4.26_FW2-3/.config
+++ b/kernel/linux-open2x-2.4.26_FW2-3/.config
@@ -135,7 +135,10 @@ CONFIG_MACH_MMSP2_MDK=y
 # CONFIG_MACH_MMSP2_DTK3 is not set
 CONFIG_MACH_MMSP2_DTK4=y
 CONFIG_MACH_GP2X=y
+# CONFIG_MACH_GP2XF200 is not set
 # CONFIG_MACH_GP2X_DEBUG is not set
+# CONFIG_MACH_GP2X_SVIDEO_NTSC is not set
+# CONFIG_MACH_GP2X_SVIDEO_PAL is not set
 CONFIG_MMSP2_USBDEV=m
 CONFIG_MMSP2_USBDEV_NETLINK=m
 # CONFIG_ARCH_ACORN is not set
@@ -174,6 +177,7 @@ CONFIG_CPU_32v4=y
 # CONFIG_ZBOOT_ROM is not set
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
+CONFIG_KEXEC=y
 CONFIG_HOTPLUG=y
 
 #
@@ -279,6 +283,8 @@ CONFIG_MTD_BLOCK=y
 CONFIG_MTD_NAND=y
 # CONFIG_MTD_NAND_VERIFY_WRITE is not set
 # CONFIG_MTD_NAND_BONFS is not set
+# CONFIG_MTD_OPEN2X_SINGLE_PARTITION is not set
+# CONFIG_OPEN2X_IGNORE_BB_ERASE is not set
 # CONFIG_MTD_NAND_SPIA is not set
 # CONFIG_MTD_NAND_TOTO is not set
 # CONFIG_MTD_NAND_AUTCPU12 is not set
@@ -307,7 +313,7 @@ CONFIG_MTD_NAND_IDS=y
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_NBD=y
+CONFIG_BLK_DEV_NBD=m
 # CONFIG_BLK_DEV_RAM is not set
 # CONFIG_BLK_DEV_INITRD is not set
 # CONFIG_BLK_STATS is not set
@@ -327,12 +333,12 @@ CONFIG_BLK_DEV_NBD=y
 #
 # Networking options
 #
-CONFIG_PACKET=y
+CONFIG_PACKET=m
 # CONFIG_PACKET_MMAP is not set
 # CONFIG_NETLINK_DEV is not set
 # CONFIG_NETFILTER is not set
 CONFIG_FILTER=y
-CONFIG_UNIX=y
+CONFIG_UNIX=m
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 # CONFIG_IP_ADVANCED_ROUTER is not set
@@ -386,81 +392,7 @@ CONFIG_SYN_COOKIES=y
 #
 # Network device support
 #
-CONFIG_NETDEVICES=y
-
-#
-# ARCnet devices
-#
-# CONFIG_ARCNET is not set
-# CONFIG_DUMMY is not set
-# CONFIG_BONDING is not set
-# CONFIG_EQUALIZER is not set
-# CONFIG_TUN is not set
-# CONFIG_ETHERTAP is not set
-
-#
-# Ethernet (10 or 100Mbit)
-#
-CONFIG_NET_ETHERNET=y
-# CONFIG_ARM_AM79C961A is not set
-# CONFIG_CS89x0 is not set
-# CONFIG_ARM_CIRRUS is not set
-# CONFIG_SUNLANCE is not set
-# CONFIG_SUNBMAC is not set
-# CONFIG_SUNQE is not set
-# CONFIG_SUNGEM is not set
-# CONFIG_NET_VENDOR_3COM is not set
-# CONFIG_LANCE is not set
-# CONFIG_NET_VENDOR_SMC is not set
-# CONFIG_NET_VENDOR_RACAL is not set
-# CONFIG_NET_ISA is not set
-# CONFIG_NET_PCI is not set
-# CONFIG_NET_POCKET is not set
-
-#
-# Ethernet (1000 Mbit)
-#
-# CONFIG_ACENIC is not set
-# CONFIG_DL2K is not set
-# CONFIG_E1000 is not set
-# CONFIG_MYRI_SBUS is not set
-# CONFIG_NS83820 is not set
-# CONFIG_HAMACHI is not set
-# CONFIG_YELLOWFIN is not set
-# CONFIG_R8169 is not set
-# CONFIG_SK98LIN is not set
-# CONFIG_TIGON3 is not set
-# CONFIG_FDDI is not set
-# CONFIG_HIPPI is not set
-# CONFIG_PLIP is not set
-# CONFIG_PPP is not set
-# CONFIG_SLIP is not set
-
-#
-# Wireless LAN (non-hamradio)
-#
-CONFIG_NET_RADIO=y
-# CONFIG_STRIP is not set
-# CONFIG_WAVELAN is not set
-# CONFIG_ARLAN is not set
-# CONFIG_AIRONET4500 is not set
-# CONFIG_AIRONET4500_NONCS is not set
-# CONFIG_AIRONET4500_PROC is not set
-# CONFIG_HERMES is not set
-# CONFIG_NET_WIRELESS is not set
-
-#
-# Token Ring devices
-#
-# CONFIG_TR is not set
-# CONFIG_NET_FC is not set
-# CONFIG_RCPCI is not set
-# CONFIG_SHAPER is not set
-
-#
-# Wan interfaces
-#
-# CONFIG_WAN is not set
+# CONFIG_NETDEVICES is not set
 
 #
 # Amateur Radio support
@@ -557,9 +489,10 @@ CONFIG_UNIX98_PTY_COUNT=256
 # CONFIG_MMSP2_TPC is not set
 CONFIG_MMSP2_DUALCPU=m
 CONFIG_MMSP2_VPP=y
-CONFIG_MMSP2_ISP=m
+CONFIG_MMSP2_ISP=y
 CONFIG_MMSP2_KEY=y
 CONFIG_MMSP_GPX_BATT=y
+# CONFIG_MMSP_GP2X_ADC is not set
 
 #
 # L3 serial bus support
@@ -732,7 +665,7 @@ CONFIG_VFAT_FS=y
 CONFIG_JFFS2_FS=m
 CONFIG_JFFS2_FS_DEBUG=0
 CONFIG_JFFS2_FS_NAND=y
-CONFIG_CRAMFS=m
+CONFIG_CRAMFS=y
 CONFIG_TMPFS=y
 CONFIG_RAMFS=y
 CONFIG_ISO9660_FS=m
@@ -842,7 +775,7 @@ CONFIG_NLS_DEFAULT="UTF8"
 # CONFIG_NLS_CODEPAGE_936 is not set
 # CONFIG_NLS_CODEPAGE_950 is not set
 # CONFIG_NLS_CODEPAGE_932 is not set
-CONFIG_NLS_CODEPAGE_949=m
+# CONFIG_NLS_CODEPAGE_949 is not set
 # CONFIG_NLS_CODEPAGE_874 is not set
 # CONFIG_NLS_ISO8859_8 is not set
 # CONFIG_NLS_CODEPAGE_1250 is not set
@@ -935,7 +868,6 @@ CONFIG_SOUND=y
 CONFIG_SOUND_MP2520F_AC97=y
 # CONFIG_SOUND_TVMIXER is not set
 # CONFIG_SOUND_AD1980 is not set
-# CONFIG_SOUND_WM97XX is not set
 
 #
 # Multimedia Capabilities Port drivers
@@ -1062,6 +994,7 @@ CONFIG_USB_FILE_STORAGE=m
 #
 CONFIG_MMCSD=y
 # CONFIG_MMCSD_DEBUG is not set
+# CONFIG_OPEN2X_SD_AUTOMOUNT is not set
 CONFIG_MMCSD_DISK=y
 CONFIG_MMCSD_SLOT=y
 
@@ -1112,6 +1045,6 @@ CONFIG_DEBUG_USER=y
 # Library routines
 #
 # CONFIG_CRC32 is not set
-CONFIG_ZLIB_INFLATE=m
+CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=m
 # CONFIG_FW_LOADER is not set
