Added a new mmuhack into the kernel that can be toggled while running and speeds up even older non-mmuhack apps
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@356 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/kernel/linux-open2x-2.4.26_FW2-3/.config
+++ b/kernel/linux-open2x-2.4.26_FW2-3/.config
@@ -200,7 +200,7 @@ CONFIG_BINFMT_ELF=y
 # CONFIG_BINFMT_MISC is not set
 # CONFIG_PM is not set
 # CONFIG_ARTHUR is not set
-CONFIG_CMDLINE="root=/dev/mtdblock4 rw"
+CONFIG_CMDLINE="root=/dev/mtdblock3 rw"
 CONFIG_ALIGNMENT_TRAP=y
 
 #
@@ -283,7 +283,7 @@ CONFIG_MTD_BLOCK=y
 CONFIG_MTD_NAND=y
 # CONFIG_MTD_NAND_VERIFY_WRITE is not set
 # CONFIG_MTD_NAND_BONFS is not set
-# CONFIG_MTD_OPEN2X_SINGLE_PARTITION is not set
+CONFIG_MTD_OPEN2X_SINGLE_PARTITION=y
 # CONFIG_OPEN2X_IGNORE_BB_ERASE is not set
 # CONFIG_MTD_NAND_SPIA is not set
 # CONFIG_MTD_NAND_TOTO is not set
@@ -338,7 +338,7 @@ CONFIG_PACKET=m
 # CONFIG_NETLINK_DEV is not set
 # CONFIG_NETFILTER is not set
 CONFIG_FILTER=y
-CONFIG_UNIX=m
+CONFIG_UNIX=y
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 # CONFIG_IP_ADVANCED_ROUTER is not set
@@ -524,7 +524,7 @@ CONFIG_MMSP_GPX_BATT=y
 # CONFIG_INPUT_A3D is not set
 # CONFIG_INPUT_ADI is not set
 # CONFIG_INPUT_COBRA is not set
-# CONFIG_INPUT_GP2X is not set
+CONFIG_INPUT_GP2X=m
 # CONFIG_INPUT_GF2K is not set
 # CONFIG_INPUT_GRIP is not set
 # CONFIG_INPUT_INTERACT is not set
@@ -994,7 +994,7 @@ CONFIG_USB_FILE_STORAGE=m
 #
 CONFIG_MMCSD=y
 # CONFIG_MMCSD_DEBUG is not set
-# CONFIG_OPEN2X_SD_AUTOMOUNT is not set
+CONFIG_OPEN2X_SD_AUTOMOUNT=y
 CONFIG_MMCSD_DISK=y
 CONFIG_MMCSD_SLOT=y
 
