Changed makefile to default to GP2X build, removed extraneous file
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@369 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/utils/o2xiv/Makefile
+++ b/utils/o2xiv/Makefile
@@ -1,7 +1,7 @@
 # BUILD SETTINGS ###################################
-DEBUG := 1
+DEBUG := 0
 # Valid values: UNIX, GP2X
-PLATFORM := UNIX
+PLATFORM := GP2X
 
 # If building for the GP2X
 GP2X_CHAINPREFIX := /opt/open2x/gcc-4.1.1-glibc-2.3.6
