Joy2xd support, TV tweaker support, mmuhack cleanup, sound volume levels fix (again)
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@370 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/kernel/linux-open2x-2.4.26_FW2-3/Makefile
+++ b/kernel/linux-open2x-2.4.26_FW2-3/Makefile
@@ -145,6 +145,9 @@ DRIVERS-y :=
 DRIVERS-m :=
 DRIVERS-  :=
 
+# senquack - for mmuhack
+DRIVERS-$(CONFIG_GP2X_MMUHACK) += drivers/gp2x/mmuhack.o
+
 DRIVERS-$(CONFIG_ACPI_BOOT) += drivers/acpi/acpi.o
 DRIVERS-$(CONFIG_PARPORT) += drivers/parport/driver.o
 DRIVERS-$(CONFIG_I2C) += drivers/i2c/i2c.o
