GMenu2X support for Joy2xd, TV Daemon, general DR6/DR7 changes
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@371 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/utils/gmenu2x/src/Makefile
+++ b/utils/gmenu2x/src/Makefile
@@ -7,6 +7,7 @@ CXX = $(CROSS_COMPILE)g++
 STRIP = $(CROSS_COMPILE)strip
 
 CFLAGS = -I./google -I"$(CHAINPREFIX)/include" `$(CHAINPREFIX)/bin/sdl-config --cflags` -DTARGET_GP2X -DOPEN2X -DTIXML_USE_STL -O3 -msoft-float -ffast-math -funroll-loops -Wall -Wno-unknown-pragmas -Wno-format
+#CFLAGS = -I./google -I"$(CHAINPREFIX)/include" `$(CHAINPREFIX)/bin/sdl-config --cflags` -DTARGET_GP2X -DOPEN2X -DTIXML_USE_STL -O0 -msoft-float -ffast-math -funroll-loops -Wall -Wno-unknown-pragmas -Wno-format
 #CFLAGS = -I./google -I"$(CHAINPREFIX)/include" `$(CHAINPREFIX)/bin/sdl-config --cflags` -g -DTARGET_GP2X -DOPEN2X -DTIXML_USE_STL -O0 -msoft-float -ffast-math -funroll-loops -Wall -Wno-unknown-pragmas -Wno-format
 CXXFLAGS = $(CFLAGS)
 LDFLAGS = -L$(CHAINPREFIX)/lib `$(CHAINPREFIX)/bin/sdl-config --libs` -lfreetype -lSDL_image -lSDL_gfx -ljpeg -lpng12 -lSDL -lz -ldl # -lpnd
